--- a/less/main.less
+++ b/less/main.less
@@ -3,7 +3,7 @@
  * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 @bodyBG: #000;
-@windowContainerFG: #f00;
+@windowContainerFG: #000;
 
 body {
   background-color: @bodyBG;
